@@ -1,5 +1,7 @@
 package no.unit.nva.cognito;
 
+import static no.unit.nva.cognito.CognitoClaims.AT;
+
 import no.unit.nva.customer.model.CustomerDto;
 import no.unit.nva.useraccessservice.model.UserDto;
 import nva.commons.apigateway.AccessRight;
@@ -9,9 +11,8 @@ import nva.commons.core.SingletonCollector;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import static no.unit.nva.cognito.CognitoClaims.AT;
+import static java.lang.Boolean.FALSE;
 
 public class UserAccessRightForCustomer {
 
@@ -24,7 +25,12 @@ public class UserAccessRightForCustomer {
         this.customer = customerDto;
     }
 
-    public static List<UserAccessRightForCustomer> fromUser(UserDto user, Set<CustomerDto> customers) {
+    public static List<UserAccessRightForCustomer> fromUser(UserDto user, Set<CustomerDto> customers,
+                                                            boolean hasAcceptedTerms) {
+        if (FALSE.equals(hasAcceptedTerms)) {
+            return List.of();
+        }
+
         var customer = customers.stream()
             .filter(candidateCustomer -> candidateCustomer.getId().equals(user.getInstitution()))
             .collect(SingletonCollector.collect());
@@ -36,7 +42,7 @@ public class UserAccessRightForCustomer {
         return user.getAccessRights()
             .stream()
             .map(accessRight -> new UserAccessRightForCustomer(customer, accessRight))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public CustomerDto getCustomer() {
